feat: translate aria attributes and labels into french to improve accessibility

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@ import Link from './Link.astro'
 import SocialIcons from './SocialIcons.astro'
 ---
 
-<footer class="py-4" aria-label="Footer" role="contentinfo" id="footer">
+<footer class="py-4" aria-label="Pied de page" role="contentinfo" id="footer">
   <div
     class="mx-auto flex max-w-5xl flex-col items-center justify-center gap-y-2 px-4 sm:flex-row sm:justify-between"
   >
@@ -15,7 +15,7 @@ import SocialIcons from './SocialIcons.astro'
         2020 - {new Date().getFullYear()} &copy; All rights reserved.
       </span>
       <Separator orientation="vertical" className="hidden h-4! sm:block" />
-      <p class="text-muted-foreground text-sm" aria-label="open-source description">
+      <p class="text-muted-foreground text-sm" aria-label="description open-source">
         <Link
           href="https://github.com/cojocaru-david/portfolio"
           class="text-foreground"
