--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -54,7 +54,7 @@ const {
   <body>
     <div class="flex h-fit min-h-screen w-full flex-col gap-y-4 sm:gap-y-6 font-sans">
       <Navbar client:load />
-      <main class="flex grow flex-col bg-background mt-10 sm:mt-4 lg:mt-6" aria-label="Main content" role="main">
+      <main class="flex grow flex-col bg-background mt-10 sm:mt-4 lg:mt-6" aria-label="Contenu principal" role="main">
         <div
           class={cn(
             'mx-auto flex grow flex-col gap-y-4 sm:gap-y-6 px-3 py-10 sm:py-16 md:py-20 lg:py-24 sm:px-6 lg:px-8',
