--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -20,7 +20,7 @@ import Favicons from './Favicons.astro'
   <meta name="author" content={SITE.author} />
   <meta name="publisher" content={SITE.title} />
   <meta name="language" content={SITE.locale} />
-  <meta name="geo.region" content="RO" />
+  <meta name="geo.region" content="FR" />
   <meta name="geo.placename" content={SITE.location} />
 
   <!-- Mobile and PWA Tags -->
