--- a/src/components/SocialIcons.astro
+++ b/src/components/SocialIcons.astro
@@ -13,7 +13,7 @@ interface Props {
 const { links } = Astro.props
 ---
 
-<ul class="flex flex-wrap gap-2 justify-around w-full mb-4 md:justify-center md:mb-0 md:w-auto" role="list" aria-label="social links">
+<ul class="flex flex-wrap gap-2 justify-around w-full mb-4 md:justify-center md:mb-0 md:w-auto" role="list" aria-label="Liens des réseaux sociaux">
   {
     links.map(({ href, label }) => (
       <li aria-label={label} role="listitem">
