feat: update image for better performance

--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -81,6 +81,7 @@ const currentUrl = Astro.url
         fetchpriority="low"      
         width={1200}
         height={800}
+        sizes="(max-width: 768px) 100vw, (max-width: 1200px) 80vw, 1200px"
       />
     )}
 
