--- a/src/components/TableOfContents.astro
+++ b/src/components/TableOfContents.astro
@@ -63,7 +63,7 @@ const groupedHeadings = groupHeadingsByH2(headings)
 
 <details
   open
-  class="group col-start-2 rounded-xl border p-4 xl:sticky xl:top-26 xl:col-start-1 xl:mr-auto xl:h-[calc(100vh-5rem)] xl:w-52 xl:rounded-none xl:border-none xl:p-0"
+  class="group col-start-2 rounded-xl border p-4 xl:sticky xl:top-26 xl:col-start-1 xl:mr-auto xl:h-[calc(100vh-5rem)] xl:w-56 xl:rounded-none xl:border-none xl:p-0"
   >
   <summary
     class="flex cursor-pointer items-center justify-between text-xl font-medium group-open:pb-4"
@@ -80,7 +80,7 @@ const groupedHeadings = groupHeadingsByH2(headings)
           class="size-5 shrink-0 transition-transform group-open:rotate-180"
         />
       </h2>
-      <p class="text-xs  text-neutral-500 dark:text-neutral-400 pr-18">
+      <p class="text-xs  text-neutral-600 dark:text-neutral-300 pr-18">
         Voici la liste de toutes les sections de cet article. Cliquez sur l'une d'entre elles pour accéder à cette section.
       </p>
     </div>
@@ -92,12 +92,12 @@ const groupedHeadings = groupHeadingsByH2(headings)
     type="always"
   >
     <ul
-      class="flex list-none flex-col gap-y-1 px-2 xl:mr-8"
+      class="flex list-none flex-col gap-y-1 px-2 xl:mr-10"
       id="table-of-contents"
     >
       {groupedHeadings.map((group) => (
-        <li class="text-foreground/60 text-sm xl:p-0">
-          {/* Titre H2 avec toggle si il y a des H3 */}
+        <li class="text-foreground/75 text-sm xl:p-0">
+          {/* H2 title with toggle if there are H3 */}
           <div class={cn(
             "flex items-center gap-2 min-h-[44px] sm:gap-0", 
             group.h3Children.length > 0 ? "cursor-pointer hover:bg-accent/20 rounded-md px-1 py-1" : ""
@@ -120,7 +120,7 @@ const groupedHeadings = groupHeadingsByH2(headings)
             </a>
           </div>
           
-          {/* Liste des H3 enfants (cachée par défaut si il y en a) */}
+          {/* List of H3 children (hidden by default if there are any) */}
           {group.h3Children.length > 0 && (
             <ul class="section-children hidden flex-col gap-y-1 mt-1 transition-all duration-200">
               {group.h3Children.map((h3) => (
