--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -77,8 +77,7 @@ const currentUrl = Astro.url
         src={aboutEntry.data.image}
         alt={aboutEntry.data.title || 'À propos'}
         class="col-start-2 mb-8 h-[500px] w-full rounded-3xl object-cover object-top"
-        loading="lazy"
-        fetchpriority="low"      
+        fetchpriority="high"      
         width={1200}
         height={800}
         sizes="(max-width: 768px) 100vw, (max-width: 1200px) 80vw, 1200px"
