--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,6 @@ import { SITE } from '@/consts'
 import { Image } from 'astro:assets'
 import YG from '../assets/YG-1.webp'
 import ProjectsCards from '@/components/ProjectsCards.astro'
-import { Picture } from 'astro:assets'
 
 // const blog = await getRecentPosts(3);
 const allProjects = await getAllProjects()
@@ -29,7 +28,8 @@ const currentUrl = Astro.url;
         <Image
           src={YG}
           alt="Photo Yoann Guion"
-          fetchpriority="high" 
+          fetchpriority="high"
+          loading="eager" 
           class="rounded-xl w-full h-115 sm:w-48 sm:h-64 object-cover shadow-lg"
           width={356}
           height={480}
