--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -42,7 +42,6 @@ const currentUrl = Astro.url
   <section
     class="grid grid-cols-[minmax(0px,1fr)_min(calc(var(--breakpoint-lg)-2rem),100%)_minmax(0px,1fr)] xl:grid-cols-[200px_minmax(0,1fr)_280px] gap-y-6 max-w-[calc(100vw-2rem)]"
   >   
-   <!--class="grid grid-cols-[minmax(0px,1fr)_min(calc(var(--breakpoint-lg)-2rem),100%)_minmax(0px,1fr)] gap-y-6 max-w-[calc(100vw-2rem)] "  -->
     <div class="col-start-2">
       <Breadcrumbs
         items={[
@@ -76,7 +75,7 @@ const currentUrl = Astro.url
       <Image
         src={aboutEntry.data.image}
         alt={aboutEntry.data.title || 'À propos'}
-        class="col-start-2 mb-8 h-[500px] w-full rounded-3xl object-cover object-top"
+        class="col-start-2 mb-8 h-[500px] rounded-3xl object-cover object-top"
         fetchpriority="high"
         loading="eager"
         width={1200}
