feat: update source for gif in 404 page

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -36,8 +36,8 @@ const currentUrl = Astro.url;
       <h1 class="mb-4 text-3xl font-medium">404: Destination introuvable...</h1>
       <p class="prose mb-4">Vous cherchez quelque chose ? Moi aussi.</p>
       <img
-        src="https://media.giphy.com/media/6uGhT1O4sxpi8/giphy.gif"
-        alt="Gif Patrick John Travolta perplexe"
+        src="/img/pulpFiction-lostTravolta.gif"
+        alt="Gif Pulp fiction John Travolta perplexe"
         class="w-full max-w-xl mx-auto rounded-lg"
       />
       <p class="pt-4 prose text-sm text-muted-foreground ">Revenons ensemble sur la bonne route.</p>
