--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -64,7 +64,7 @@ const currentUrl = Astro.url
         </h1>
 
         {aboutEntry.data.description && (
-          <p class="text-muted-foreground text-md max-w-2xl mt-3">
+          <p class="text-muted-foreground text-md  mt-3">
             {aboutEntry.data.description}
           </p>
         )}
@@ -72,15 +72,17 @@ const currentUrl = Astro.url
     </section>
 
     {aboutEntry.data.image && (
+      
       <Image
         src={aboutEntry.data.image}
-        alt={aboutEntry.data.title || 'À propos'}
-        class="col-start-2 mb-8 h-[500px] rounded-3xl object-cover object-top"
+        alt="Photo Yoann Guion"
+        class="col-start-2 mb-8 w-full h-[400px] sm:h-[600px] rounded-3xl object-cover object-top "
         fetchpriority="high"
         loading="eager"
         width={1200}
-        height={800}
-        sizes="(max-width: 768px) 100vw, (max-width: 1200px) 80vw, 1200px"
+        height={1600}
+        widths={[400, 600, 800, 1200, 1600]}
+        sizes="(max-width: 640px) 100vw, 1200px"
       />
     )}
 
