fix: update resumee and email adress

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import PageHead from '@/components/PageHead.astro'
 import Skills from '@/components/react/skills'
 import { buttonVariants } from '@/components/ui/button'
 import Layout from '@/layouts/Layout.astro'
-import { getAllProjects, getRecentPosts } from '@/lib/data-utils'
+import { getAllProjects } from '@/lib/data-utils'
 import { SITE } from '@/consts'
 import { Image } from 'astro:assets'
 import YG from '../assets/YG-1.webp'
